syntax = "proto3";

package blog;

message Blog {
	string id = 1;
	string author_id = 2;
	string title = 3;
	string content = 4;
}

message CreateBlogRequest {
	Blog blog = 1; // will not contain an id
}

message CreateBlogResponse {
	Blog blog = 1; // will contain an id
}

message ReadBlogRequest {
	string blog_id = 1;
}

message ReadBlogResponse {
	Blog blog = 1;
}

message UpdateBlogRequest {
	Blog blog = 1;
}

message UpdateBlogResponse {
	Blog blog = 1;
}

message DeleteBlogRequest {
	string blog_id = 1;
}

message DeleteBlogRepsponse {
	string blog_id = 1;
}

message ListBlogRequest {

}

message ListBlogResponse {
	Blog blog = 1;
}

service BlogService {
	rpc CreateBlog (CreateBlogRequest) returns (CreateBlogResponse) {}
	rpc ReadBlog (ReadBlogRequest) returns (ReadBlogResponse) {}
	rpc UpdateBlog (UpdateBlogRequest) returns (UpdateBlogResponse) {}
	rpc DeleteBlog (DeleteBlogRequest) returns (DeleteBlogRepsponse) {}
	rpc ListBlog (ListBlogRequest) returns (stream ListBlogResponse) {}
}